--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 nav {
-    height: 80px;
+    height: 11vh;
     transition: all 0.2s ease-in;
 }
 
@@ -12,7 +12,7 @@ nav {
 }
 
 .navbar {
-    height: 80px;
+    height: 11vh;
     display: flex;
     position: absolute;
 }
@@ -28,14 +28,14 @@ nav {
 }
 
 .p-left {
-    padding-left: 28.5px;
+    padding-left: 2vw;
 }
 
 .underlined-heading {
     position: relative;
     display: inline-block;
     font-family: 'Cantarell-Bold', sans-serif;
-    font-size: 25px;
+    font-size: 1.73vw;
 }
 
 .underlined-heading::after {
@@ -43,15 +43,15 @@ nav {
     position: absolute;
     bottom: -6px;
     left: 0;
-    width: 190px;
+    width: 13.3vw;
     height: 3px;
-    background-image: linear-gradient(to right, #FF2E2E 0%, #FF2E2E 48%, transparent 48%, transparent 52%, #66FF00 52%, #66FF00 100%);
+    background-image: linear-gradient(to right, #FF2E2E 0%, #FF2E2E 49%, transparent 49%, transparent 51%, #66FF00 51%, #66FF00 100%);
     background-size: 100% 100%;
 }
 
 .announcement-heading {
     width: 100vw;
-    top: 31px;
+    justify-content: center;
     position: absolute;
     display: flex;
     flex-direction: column;
@@ -60,7 +60,7 @@ nav {
 }
 
 .announcement-heading span {
-    font-size: 16.5px;
+    font-size: 1.15vw;
 }
 
 .fade-text {
@@ -109,7 +109,7 @@ nav {
 
 .navbar-2 {
     position: fixed;
-    height: 80px;
+    height: 11vh;
     width: 100%;
     /* padding-left: 28.5px; */
     display: flex;
@@ -121,24 +121,23 @@ nav {
 .navbar-mask {
     position: absolute;
     width: 100%;
-    height: 80px;
+    height: 11vh;
     background-color: #fff;
     opacity: 10%;
 }
 
 .nav-email-form {
     position: fixed;
-    right: 29px;
-    top: 19px;
-    height: 48px;
-    width: 230px;
+    right: 2vw;
+    height: 6.7vh;
+    width: 16.4vw;
     border-radius: 50px;
     transition: all 0.5s ease;
 }
 
 .email-default-state {
-    height: 48px;
-    width: 230px;
+    height: 6.7vh;
+    width: 16.4vw;
     border-radius: 50px;
     background-color: #278AFF;
     color: black;
@@ -148,30 +147,30 @@ nav {
 }
 
 .nav-email-text {
-    padding-left: 16px;
+    padding-left: 1.3vw;
     font-family: 'Poppins-SemiBold';
-    font-size: 16.5px;
+    font-size: 1.15vw;
 }
 
 .email-hover-state {
     background-color: #444444;
-    height: 48px;
-    width: 211px;
+    height: 6.7vh;
+    width: 14.7vw;
     border-radius: 50px;
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding-left: 20px;
+    padding-left: 1.6vw;
 }
 
 .email-hover-state input {
     border: none;
     outline: none;
     color: #fff;
-    width: 140px;
-    padding: 5px 10px;
+    width: 9.8vw;
+    padding: 7px 10px;
     font-family: 'Poppins-SemiBold';
-    font-size: 16.5px;
+    font-size: 1.15vw;
     margin-right: 6px;
 }
 
@@ -186,8 +185,8 @@ nav {
 .email-arrow-button {
     background-color: #278AFF;
     border-radius: 37.5px;
-    height: 37.5px;
-    width: 37.5px;
+    height: 2.6vw;
+    width: 2.6vw;
     display: flex;
     align-items: center;
     justify-content: center;
